--- a/src/components/Banner/styles.module.css
+++ b/src/components/Banner/styles.module.css
@@ -6,6 +6,8 @@
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
+    margin-top: 3rem;
+
 }
 
 .explore {
@@ -13,7 +15,35 @@
 }
 
 .explore h2 {
-    font-size: xxx-large;
+    font-size: 3rem;
     font-weight: 800;
     margin: 0;
+}
+
+.explore p {
+    margin-bottom: 3rem;
+}
+
+.btn {
+    background-color: black;
+    color: white;
+    padding: 0.75rem 1.75rem;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.25s;
+    border: none;
+}
+
+.btn:hover,
+.btn:focus {
+  box-shadow: 0 0.5em 0.5em -0.4em rgba(0, 0, 0, 0.5);
+  transform: translateY(-0.25em);
+}
+
+.canvas {
+    display: flex;
+    flex-direction: column;
+    height: 20rem;
+    width: 50%;
+    /* background-color: red; */
 }
